--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "engines": {
-    "npm": "7.x"
-    },
+    "npm": "8.x"
+  },
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server/server.js",
+    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+    "install": "cd server && npm i && cd ../client && npm i",
+    "seed": "cd server && npm run seed",
+    "build": "cd client && npm run build"
   },
   "repository": {
     "type": "git",
@@ -15,11 +19,11 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "concurrently": "^5.1.0"
-  },
   "bugs": {
     "url": "https://github.com/r134x7/project-scale/issues"
   },
-  "homepage": "https://github.com/r134x7/project-scale#readme"
+  "homepage": "https://github.com/r134x7/project-scale#readme",
+  "devDependencies": {
+    "concurrently": "^7.3.0"
+  }
 }
