setup proxy server

--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "project-scale",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001/",
   "dependencies": {
     "@apollo/client": "^3.6.9",
     "@mantine/core": "^5.0.0",
