--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "graphql": "^16.5.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
