--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,9 @@
 {
   "name": "project-scale-server",
   "version": "0.1.0",
+  "engines": {
+    "node": "16.x"
+  },
   "description": "server packages",
   "main": "server.js",
   "scripts": {
