added rewrites to fix api issues

--- a/vercel.json
+++ b/vercel.json
@@ -9,5 +9,12 @@
         "src": "./client/build", 
         "use": "@vercel/static"
       }
+    ],
+  
+    "rewrites": [
+      {
+        "source": "/(.*)",
+        "destination": "/server/server.js"
+      }
     ]
   }
